--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'am Sachin</h2>
+                        <h2 class="about__subtitle">I am Sachin</h2>
                         <p class="about__text">To obtain a challenging carrier opportunity that enables me to expand my education and continue to accumulate knowledge while providing my best service.</br>
 
                             A polite and friendly personality with strong interpersonal skills and the ability to relate comfortably with people at all levels</p>           
@@ -79,7 +79,7 @@
 
                 <div class="skills__container bd-grid">          
                     <div>
-                        <h2 class="skills__subtitle">Profesional Skills</h2>
+                        <h2 class="skills__subtitle">Professional Skills</h2>
                         <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p>
                         <div class="skills__data">
                             <div class="skills__names">
