--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/sachin-heshan-a033a2101/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
+                    <a href="https://www.facebook.com/sachin.heshan" class="home__social-icon"><i class='bx bxl-facebook' ></i></a>
                     <a href="https://github.com/sachin56" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
@@ -141,9 +141,6 @@
             <section class="work section" id="work">
                 <h2 class="section-title">Work</h2>
                 
-                        <p class="skills__text" style="padding-left: 700px;">Web sites and android apps that i have developed.</p>
-                   
-
                 <div class="work__container bd-grid">
                     <div class="work__img">
                         <a href="http://lunula.org/"><img src="assets/img/lunas.png" alt=""></a>
@@ -186,9 +183,9 @@
         <footer class="footer">
             <p class="footer__title">Sachin Heshan</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://www.linkedin.com/in/sachin-heshan-a033a2101/" class="footer__icon"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/sachin56" class="footer__icon"><i class='bx bxl-github' ></i></a>
+                <a href="https://www.facebook.com/sachin.heshan" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
             </div>
             <p>&#169; 2021 copyright all right reserved</p>
         </footer>
