--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#home" class="nav__logo" style="color:var(--first-color); font-size:30px;">Sachin Heshan</a>
+                    <a href="#home" class="nav__logo" style="color:var(--first-color); font-size:30px;">Sachin</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
