--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </br>
     </br>
                 <div class="home__img">    
-                    <img src="assets/img/perfil.png" alt="">
+                    <!-- <img src="assets/img/perfil.png" alt=""> -->
                 </div>
             </section>
 
