--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Sachin</span><br>Web Developer</h1>
 
-                    <a href="assets/img/Sachin cv .pdf" class="button">Resume Download</a>
+                    <a href="assets/img/sachin's curiculum vitae.pdf" class="button">Resume Download</a>
                 </div>
 
                 <div class="home__social">
